vbnc/vbnc/tests/Errors/30060-9.vb
Class T
    Const M_String As String = 2D
End Class